k8s/10-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: mongo, namespace: photoapp }
spec:
  replicas: 1
  strategy: { type: Recreate }
  selector: { matchLabels: { app: mongo } }
  template:
    metadata: { labels: { app: mongo } }
    spec:
      containers:
        - name: mongo
          image: mongo:7
          ports: [{ containerPort: 27017 }]
          volumeMounts:
            - { name: data, mountPath: /data/db }
      volumes:
        - name: data
          persistentVolumeClaim: { claimName: mongo-pvc }
---
apiVersion: v1
kind: Service
metadata: { name: mongo, namespace: photoapp }
spec:
  selector: { app: mongo }
  ports: [{ port: 27017, targetPort: 27017 }]
