k8s/20-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: backend, namespace: photoapp }
spec:
  replicas: 1
  selector: { matchLabels: { app: backend } }
  template:
    metadata: { labels: { app: backend } }
    spec:
      containers:
        - name: backend
          image: nhtm/photoapp-backend:v1   # ← đổi username
          ports: [{ containerPort: 8081 }]
          volumeMounts:
            - { name: photos, mountPath: /app/images }
      volumes:
        - name: photos
          persistentVolumeClaim: { claimName: photos-pvc }
---
apiVersion: v1
kind: Service
metadata: { name: backend, namespace: photoapp }
spec:
  selector: { app: backend }
  ports: [{ port: 8081, targetPort: 8081 }]
