k8s/30-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: frontend, namespace: photoapp }
spec:
  replicas: 1
  selector: { matchLabels: { app: frontend } }
  template:
    metadata: { labels: { app: frontend } }
    spec:
      containers:
        - name: frontend
          image: nhtm/photoapp-frontend:v1   # ← đổi username
          ports: [{ containerPort: 80 }]
---
apiVersion: v1
kind: Service
metadata: { name: frontend, namespace: photoapp }
spec:
  selector: { app: frontend }
  ports: [{ port: 80, targetPort: 80 }]
