k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoapp
  namespace: photoapp
spec:
  ingressClassName: nginx
  rules:
    - host: photoapp.local
      http:
        paths:
          - { path: /api,    pathType: Prefix, backend: { service: { name: backend,  port: { number: 8081 } } } }
          - { path: /admin,  pathType: Prefix, backend: { service: { name: backend,  port: { number: 8081 } } } }
          - { path: /images, pathType: Prefix, backend: { service: { name: backend,  port: { number: 8081 } } } }
          - { path: /,       pathType: Prefix, backend: { service: { name: frontend, port: { number: 80 } } } }
